# vcvars-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
src/: lib.rs
