[package]
name = "vcvars"
version = "0.1.5"
description = "Provides access to the environment variables set by vcvars that comes with a Microsoft Visual Studio installation."
categories = ["development-tools::build-utils"]
keywords = ["visual-studio", "compiler", "environment", "microsoft", "windows"]
repository = "https://github.com/Enyium/vcvars-rs"
documentation = "https://docs.rs/vcvars"
license = "MIT OR Apache-2.0"
edition = "2021"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]

[dependencies]
thiserror = "1.0.37"
itertools = "0.10.5"
filenamify = "0.1.0"

[dev-dependencies]
serial_test = "1.0.0"
regex = "1.7.0"
